Menu button alignment issues fixed

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -117,6 +117,8 @@ article .header,
 
     #byline-close {
         display: none;
+        line-height: 1;
+        top: -7px;
     }
 }
 
